# aoc_2021_rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  tmp.txt  ~$c_2021-day19.docx
doc/: Darwins_dangerouse_idea.md  aoc_2021-day18.docx  aoc_2021-day19.docx
docs/: day11-anim.md  day14-anim.md  day18-anim.md
input/: day_15-input-5x.txt  day_18-sample-1.txt  day_18-sample.txt  day_2-input.txt
questions/: AOC-2021-16.docx  aoc-2021-day17.docx  day-16-question.txt  day-17-question.txt  day-4-question.txt  fig-day16.docx  sample-text.txt
src/: lib.rs  utils.rs
src/advent/: mod.rs
src/advent/day01/: day_1.rs
src/advent/day02/: day_2.rs
src/advent/day03/: day_3.rs  mod.rs
src/advent/day04/: board.rs  day_4.rs  mod.rs
src/advent/day05/: day_5.rs  mod.rs
src/advent/day06/: day_6.rs  mod.rs
src/advent/day07/: day_7.rs  mod.rs
src/advent/day08/: day_8.rs  day_8.rs-back  day_8_a.rs  mod.rs
src/advent/day09/: day_9.rs  mod.rs
src/advent/day10/: day_10.rs  mod.rs
src/advent/day11/: animate.rs  day_11.rs  mod.rs
src/advent/day12/: day_12.rs  day_12_2nd.rs  day_12_old.rs  mod.rs  path_matrix.rs
src/advent/day13/: day_13.rs  mod.rs
src/advent/day14/: animate.rs  day_14.rs  day_14_2nd.rs  day_14_3rd.rs  day_14_4th.rs  day_14_5th_first.rs  day_14_5th_second.rs  day_14_6th.rs  day_14_7th_uncle.rs  mod.rs
src/advent/day15/: day_15.rs  day_15_part1.rs  day_15_part1_faster.rs  day_15_part2.rs  day_15_part2_faster.rs  day_15_part2_faster_async.rs  day_15_uncle.rs  mod.rs
src/advent/day16/: day_16.rs  day_16_part1.rs  day_16_part2-001.rs  day_16_part2.rs  (+8 more)
(+17 files in other folders)
